--- a/Workspace/Project/WebContent/login.html
+++ b/Workspace/Project/WebContent/login.html
@@ -12,70 +12,69 @@
 	<body>
 		<div class="login-container">
 			<form id="login-form">
-                <div class="bg-white p-5 rounded-3 surrounded" style="width: 500px;">
-                    <div class="text-center mb-3">
-                        <h3 class="logo-text">로그인</h3>
-                    </div>
-                    <hr>
-                    <div class="d-flex gap-2">
-                        <div class="d-flex flex-column gap-2 me-auto" style="width: 300px">
-                            <div class="input-group">
-                                <span class="d-inline-block input-group-text" style="width: 100px">아이디</span>
-                                <input class="form-control" type="text" />
-                            </div>
-                            <div class="input-group">
-                                <span class="d-inline-block input-group-text" style="width: 100px">비밀번호</span>
-                                <input class="form-control" type="text" />
-                            </div>
-                        </div>
-                        <input class="btn login-btn" type="button" value="로그인" />
-                    </div>
-                    <div class="d-flex mt-1">
-                        <div class="me-auto my-auto">
-                            <input id="ck-save-id-pass" type="checkbox" />
-                            <label for="ck-save-id-pass">아이디/비밀번호 저장</label>
-                        </div>
-                        <button id="register-btn" class="btn register-btn p-1">회원가입</button>
-                    </div>
-                </div>
-				
+				<div class="bg-white p-5 rounded-3 surrounded" style="width: 500px">
+					<div class="text-center mb-3">
+						<h3 class="logo-text">로그인</h3>
+					</div>
+					<hr />
+					<div class="d-flex gap-2">
+						<div class="d-flex flex-column gap-2 me-auto" style="width: 300px">
+							<div class="input-group">
+								<span class="d-inline-block input-group-text" style="width: 100px">아이디</span>
+								<input class="form-control" type="text" />
+							</div>
+							<div class="input-group">
+								<span class="d-inline-block input-group-text" style="width: 100px">비밀번호</span>
+								<input class="form-control" type="text" />
+							</div>
+						</div>
+						<input class="btn login-btn" type="button" value="로그인" />
+					</div>
+					<div class="d-flex mt-1">
+						<div class="me-auto my-auto">
+							<input id="ck-save-id-pass" type="checkbox" />
+							<label for="ck-save-id-pass">아이디/비밀번호 저장</label>
+						</div>
+						<button id="register-btn" class="btn register-btn p-1">회원가입</button>
+					</div>
+				</div>
 			</form>
 
 			<form id="register-form" style="display: none">
-                <div class="bg-white p-5 rounded-3 surrounded" style="width: 500px;">
-                    <div class="text-center mb-3">
-                        <h3 class="logo-text">회원가입</h3>
-                    </div>
-                    <hr>
-				<div class="d-flex gap-2">
-					<div class="d-flex flex-column gap-2" style="width: 400px">
-						<div class="input-group">
-							<span class="d-inline-block input-group-text" style="width: 120px">아이디</span>
-							<input class="form-control" type="text" />
-						</div>
-						<div class="input-group">
-							<span class="d-inline-block input-group-text" style="width: 120px">비밀번호</span>
-							<input class="form-control" type="text" />
-						</div>
-						<div class="input-group">
-							<span class="d-inline-block input-group-text" style="width: 120px">비밀번호 확인</span>
-							<input class="form-control" type="text" />
-						</div>
-						<div class="input-group">
-							<span class="d-inline-block input-group-text" style="width: 120px">이름</span>
-							<input class="form-control" type="text" />
-						</div>
-						<div class="input-group">
-							<span class="d-inline-block input-group-text" style="width: 120px">이메일</span>
-							<input class="form-control" type="text" />
+				<div class="bg-white p-5 rounded-3 surrounded" style="width: 500px">
+					<div class="text-center mb-3">
+						<h3 class="logo-text">회원가입</h3>
+					</div>
+					<hr />
+					<div class="d-flex gap-2">
+						<div class="d-flex flex-column gap-2" style="width: 400px">
+							<div class="input-group">
+								<span class="d-inline-block input-group-text" style="width: 120px">아이디</span>
+								<input class="form-control" type="text" />
+							</div>
+							<div class="input-group">
+								<span class="d-inline-block input-group-text" style="width: 120px">비밀번호</span>
+								<input class="form-control" type="text" />
+							</div>
+							<div class="input-group">
+								<span class="d-inline-block input-group-text" style="width: 120px">비밀번호 확인</span>
+								<input class="form-control" type="text" />
+							</div>
+							<div class="input-group">
+								<span class="d-inline-block input-group-text" style="width: 120px">이름</span>
+								<input class="form-control" type="text" />
+							</div>
+							<div class="input-group">
+								<span class="d-inline-block input-group-text" style="width: 120px">이메일</span>
+								<input class="form-control" type="text" />
+							</div>
 						</div>
 					</div>
+					<div class="mt-2 w-100 d-flex gap-2 d flex-row-reverse" style="width: 400px">
+						<button id="register-ok-btn" class="btn">회원가입</button>
+						<button id="register-cancel-btn" class="btn">취소</button>
+					</div>
 				</div>
-				<div class="mt-2 w-100 d-flex gap-2 d flex-row-reverse" style="width: 400px;">
-					<button id="register-ok-btn" class="btn">회원가입</button>
-					<button id="register-cancel-btn" class="btn">취소</button>
-				</div>
-            </div>
 			</form>
 		</div>
 
