--- a/Workspace/Project/WebContent/menu-search-book.html
+++ b/Workspace/Project/WebContent/menu-search-book.html
@@ -7,18 +7,18 @@
 		<title>메인 페이지</title>
 
 		<link rel="stylesheet" href="css/bootstrap/bootstrap.css" />
-		<link rel="stylesheet" href="css/main.css" type="text/css"/>
-		<link rel="stylesheet" href="css/header.css" type="text/css">
-		<link rel="stylesheet" href="css/left-content.css" type="text/css">
+		<link rel="stylesheet" href="css/header.css" type="text/css" />
+		<link rel="stylesheet" href="css/left-content.css" type="text/css" />
+		<link rel="stylesheet" href="css/menu-search-book.css" type="text/css" />
 	</head>
 	<body>
-		<div class="bg-white mx-auto p-3" style="width: 1250px;">
-			<div class="header container-fluid p-0" >
+		<div class="bg-white mx-auto p-3" style="width: 1250px">
+			<div class="header container-fluid p-0">
 				<div class="header-container">
 					<div class="header-logo">NOVELPIA</div>
 					<div class="header-logo-sub">The Land Of Pure Book Farmers</div>
 				</div>
-	
+
 				<div class="d-flex align-items-end justify-content-end mb-2" style="width: 1200px; height: 100px">
 					<strong>윤형도님</strong>&nbsp;안녕하세요! &nbsp;&nbsp; 포인트&nbsp;:&nbsp;
 					<a href="#" style="text-decoration: none">500P</a>
@@ -114,7 +114,7 @@
 					</div>
 				</div>
 			</div>
-			<div class="container-xxl mt-2 p-0" style="width: 1200px;">
+			<div class="container-xxl mt-2 p-0" style="width: 1200px">
 				<div class="main-content">
 					<div class="left-content">
 						<!-- <div onclick="location.href='newurl.html';">&nbsp;</div> 활용 -->
@@ -161,130 +161,90 @@
 							</div>
 						</div>
 					</div>
-	
+
 					<div class="right-content" style="width: 100%">
-						<div class="notice-container">
-							<img src="images/notice-1.jpg" class="w-100 h-100">
-							<div class="notice-control-panel">
-								<button class="back"></button>
-								1 / 10
-								<button class="forward"></button>
+						<h4 class="mt-3 mb-3 fw-bold ms-1">도서 검색</h4>
+						<div class="border-container">
+							<div class="search-group">
+								<select class="form-select">
+									<option value="1" selected>도서명</option>
+									<option value="2">저자</option>
+									<option value="3">출판사</option>
+									<option value="4">코드번호</option>
+								</select>
+								<input class="form-control" type="text" text placeholder="입력해주세요." />
 							</div>
-						</div>
-						<br>
-						<h4 class="mt-3 mb-3 fw-bold ms-1">최근 후기 게시글</h4>
-						<div class="review-container">
+							<hr />
 							<table class="table">
-								<thead class="fw-bold">
-									<tr>
-										<td style="width: 8%;" >글번호</td>
-										<td style="width: 60%;" >제목</tds>
-										<td style="width: 15%;">작성자</td>
-										<td>작성일</td>
-									</tr>
-								</thead>
-								<tbody>
-									<tr>
-										<td>1</td>
-										<td>개꿀잼 ㅋfdsfdsfdsfdsfs</td>
-										<td>앙기모리</td>
-										<td>2021-07-13</td>
-									</tr>
-									<tr>
-										<td>2</td>
-										<td>개꿀잼 ㅋfdsfdsfdsfdsfs</td>
-										<td>앙기모리</td>
-										<td>2021-07-13</td>
-									</tr>
-									<tr>
-										<td>2</td>
-										<td>개꿀잼 ㅋfdsfdsfdsfdsfs</td>
-										<td>앙기모리</td>
-										<td>2021-07-13</td>
-									</tr>
-									<tr>
-										<td>2</td>
-										<td>개꿀잼 ㅋfdsfdsfdsfdsfs</td>
-										<td>앙기모리</td>
-										<td>2021-07-13</td>
-									</tr>
-									<tr>
-										<td>2</td>
-										<td>개꿀잼 ㅋfdsfdsfdsfdsfs</td>
-										<td>앙기모리</td>
-										<td>2021-07-13</td>
-									</tr>
-								</tbody>
+								<table class="table">
+									<thead class="fw-bold">
+										<tr>
+											<td style="width: 10%">번호</td>
+											<td style="width: 50%">제목</td>
+											<td style="width: 20%">저자</td>
+											<td>출판사</td>
+										</tr>
+									</thead>
+									<tbody>
+										<tr>
+											<td>1</td>
+											<td>이 어린녀석에게 축복을</td>
+											<td>김동팔</td>
+											<td>새꿈나무</td>
+										</tr>
+									</tbody>
+								</table>
 							</table>
-						</div>
-						<br>
-						<h4 class="mt-3 mb-3 fw-bold ms-1">최근 신청 게시글</h4>
-						<div class="request-container">
-							<table class="table">
-								<thead class="fw-bold">
-									<tr>
-										<td style="width: 8%;" >글번호</td>
-										<td style="width: 60%;" >제목</tds>
-										<td style="width: 15%;">작성자</td>
-										<td>작성일</td>
-									</tr>
-								</thead>
-								<tbody>
-									<tr onclick="document.location='https://novel.munpia.com/236702'" role="button">
-										<td>1</td>
-										<td>개꿀잼 ㅋfdsfdsfdsfdsfs</td>
-										<td>앙기모리</td>
-										<td>2021-07-13</td>
-									</tr>
-									<tr onclick="document.location='https://novel.munpia.com/236702'" role="button">
-										<td>2</td>
-										<td>개꿀잼 ㅋfdsfdsfdsfdsfs</td>
-										<td>앙기모리</td>
-										<td>2021-07-13</td>
-									</tr>
-									<tr onclick="document.location='https://novel.munpia.com/236702'" role="button">
-										<td>2</td>
-										<td>개꿀잼 ㅋfdsfdsfdsfdsfs</td>
-										<td>앙기모리</td>
-										<td>2021-07-13</td>
-									</tr>
-									<tr onclick="document.location='https://novel.munpia.com/236702'" role="button">
-										<td>2</td>
-										<td>개꿀잼 ㅋfdsfdsfdsfdsfs</td>
-										<td>앙기모리</td>
-										<td>2021-07-13</td>
-									</tr>
-									<tr onclick="document.location='https://novel.munpia.com/236702'" role="button">
-										<td>2</td>
-										<td>개꿀잼 ㅋfdsfdsfdsfdsfs</td>
-										<td>앙기모리</td>
-										<td>2021-07-13</td>
-									</tr>
-								</tbody>
-							</table>
+
+							<div class="row align-content-center justify-content-center">
+								<div class="col text-start"></div>
+								<div class="col text-center">
+									<div class="pagination-panel">
+										<button class="back"></button>
+										<div class="pages">
+											<button>1</button>
+											<button>2</button>
+											<button>3</button>
+											<button>4</button>
+											<button>5</button>
+										</div>
+										<button class="forward"></button>
+									</div>
+								</div>
+
+								<div class="col text-end">
+									<div class="dropdown">
+										<a class="btn btn-reverse dropdown-toggle" href="#" role="button" id="dropdownMenuLink" data-bs-toggle="dropdown" aria-expanded="false">
+										  10개씩 보기
+										</a>
+									  
+										<ul class="dropdown-menu" aria-labelledby="dropdownMenuLink">
+										  <li><a class="dropdown-item" href="#">10개씩 보기</a></li>
+										  <li><a class="dropdown-item" href="#">20개씩 보기</a></li>
+										  <li><a class="dropdown-item" href="#">50개씩 보기</a></li>
+										</ul>
+									  </div>
+								</div>
+							</div>
 						</div>
 					</div>
 				</div>
 			</div>
 		</div>
-		
+
 		<footer class="position-relative mt-5" style="background-color: #000; color: #fff">
 			<div class="container text-center p-5">
 				<div class="d-flex align-items-center justify-content-center">
-					<img style="margin-right: 5px; width: 40px; height: 30px;"
-						src="images/logo.png" /> &nbsp; <span
-						style="font-size: 30px;">NOVELPIA</span>
+					<img style="width: 30px; height: 30px" src="https://img.icons8.com/fluency/48/000000/rhombus.png" /> &nbsp; <span style="font-size: 30px">NOVELPIA</span>
 				</div>
-				<div class="mt-3" style="font-size: 13px;">
-					<a class="text-decoration-none text-white" href="#">최신 뉴스 보기</a>&nbsp;| <a
-						class="text-decoration-none text-white" href="#">회사 위치</a>&nbsp;| <a
-						class="text-decoration-none text-white" href="#">개인정보 처리 방침</a>
+				<div class="mt-3" style="font-size: 13px">
+					<a class="text-decoration-none text-white" href="#">최신 뉴스 보기</a>&nbsp;| <a class="text-decoration-none text-white" href="#">회사 위치</a>&nbsp;|
+					<a class="text-decoration-none text-white" href="#">개인정보 처리 방침</a>
 				</div>
 			</div>
 		</footer>
 
-
-		<script src="js/bootstrap/bootstrap.js"></script>
 		<script src="js/jquery/jquery-3.6.0.js"></script>
+		<script src="js/bootstrap/bootstrap.bundle.js"></script>
 	</body>
 </html>
