--- a/Workspace/Project/WebContent/menu-search-info.html
+++ b/Workspace/Project/WebContent/menu-search-info.html
@@ -7,18 +7,18 @@
 		<title>메인 페이지</title>
 
 		<link rel="stylesheet" href="css/bootstrap/bootstrap.css" />
-		<link rel="stylesheet" href="css/main.css" type="text/css"/>
-		<link rel="stylesheet" href="css/header.css" type="text/css">
-		<link rel="stylesheet" href="css/left-content.css" type="text/css">
+		<link rel="stylesheet" href="css/header.css" type="text/css" />
+		<link rel="stylesheet" href="css/left-content.css" type="text/css" />
+		<link rel="stylesheet" href="css/menu-search-info.css" type="text/css" />
 	</head>
 	<body>
-		<div class="bg-white mx-auto p-3" style="width: 1250px;">
-			<div class="header container-fluid p-0" >
+		<div class="bg-white mx-auto p-3" style="width: 1250px">
+			<div class="header container-fluid p-0">
 				<div class="header-container">
 					<div class="header-logo">NOVELPIA</div>
 					<div class="header-logo-sub">The Land Of Pure Book Farmers</div>
 				</div>
-	
+
 				<div class="d-flex align-items-end justify-content-end mb-2" style="width: 1200px; height: 100px">
 					<strong>윤형도님</strong>&nbsp;안녕하세요! &nbsp;&nbsp; 포인트&nbsp;:&nbsp;
 					<a href="#" style="text-decoration: none">500P</a>
@@ -114,7 +114,7 @@
 					</div>
 				</div>
 			</div>
-			<div class="container-xxl mt-2 p-0" style="width: 1200px;">
+			<div class="container-xxl mt-2 p-0" style="width: 1200px">
 				<div class="main-content">
 					<div class="left-content">
 						<!-- <div onclick="location.href='newurl.html';">&nbsp;</div> 활용 -->
@@ -161,65 +161,58 @@
 							</div>
 						</div>
 					</div>
-	
+
 					<div class="right-content" style="width: 100%">
-						<div class="notice-container">
-							<img src="images/notice-1.jpg" class="w-100 h-100">
-							<div class="notice-control-panel">
-								<button class="back"></button>
-								1 / 10
-								<button class="forward"></button>
+						<h4 class="mt-3 mb-3 fw-bold ms-1">도서 정보</h4>
+						<div class="border-container d-flex gap-2">
+							<div class="d-flex flex-column gap-2" style="width: 60%; padding-right: 30px;">
+								<div class="row g-0">
+									<div class="col-3">제목</div>
+									<div class="col">천재 흑마법사</div>
+								</div>
+								<div class="row g-0">
+									<div class="col-3">저자</div>
+									<div class="col">노란커피</div>
+								</div>
+								<div class="row g-0">
+									<div class="col-3">출판사</div>
+									<div class="col">문피아</div>
+								</div>
+								<div class="row g-0">
+									<div class="col-3">연령제한</div>
+									<div class="col">전체이용가</div>
+								</div>
+								<div class="row g-0">
+									<div class="col-3">코드</div>
+									<div class="col">AX000DD</div>
+								</div>
+								<div class="row g-0">
+									<div class="col-3">평점</div>
+									<div class="col d-flex align-items-end">
+										<div class="rating-container" style="width: 150px; height: 30px">
+											<div class="rating-star-empty w-100"></div>
+											<div class="rating-star-fill" style="width: 30%"></div>
+										</div>
+										<span class="rating-score">(3.1)&nbsp;</span>
+									</div>
+								</div>
+								<div class="w-100 h-100 row align-items-end gap-3 g-0 p-0 border-0">
+									<div class="text-center text-secondary">이미 소장중인 도서입니다.</div>
+									<div class="col">
+										<button class="w-100 h-100 btn-reverse box-shadow">대여(50P)</button>
+									</div>
+									<div class="col">
+										<button class="w-100 h-100 btn-reverse box-shadow">구매(50P)</button>
+									</div>
+								</div>
+							</div>
+							<div class="image-container">
+								<img class="w-100 h-100" src="https://cdn1.munpia.com/files/attach/2021/0803/001/g0hYyK68OcR8NwtT.jpg" />
 							</div>
 						</div>
 						<br>
-						<h4 class="mt-3 mb-3 fw-bold ms-1">최근 후기 게시글</h4>
-						<div class="review-container">
-							<table class="table">
-								<thead class="fw-bold">
-									<tr>
-										<td style="width: 8%;" >글번호</td>
-										<td style="width: 60%;" >제목</tds>
-										<td style="width: 15%;">작성자</td>
-										<td>작성일</td>
-									</tr>
-								</thead>
-								<tbody>
-									<tr>
-										<td>1</td>
-										<td>개꿀잼 ㅋfdsfdsfdsfdsfs</td>
-										<td>앙기모리</td>
-										<td>2021-07-13</td>
-									</tr>
-									<tr>
-										<td>2</td>
-										<td>개꿀잼 ㅋfdsfdsfdsfdsfs</td>
-										<td>앙기모리</td>
-										<td>2021-07-13</td>
-									</tr>
-									<tr>
-										<td>2</td>
-										<td>개꿀잼 ㅋfdsfdsfdsfdsfs</td>
-										<td>앙기모리</td>
-										<td>2021-07-13</td>
-									</tr>
-									<tr>
-										<td>2</td>
-										<td>개꿀잼 ㅋfdsfdsfdsfdsfs</td>
-										<td>앙기모리</td>
-										<td>2021-07-13</td>
-									</tr>
-									<tr>
-										<td>2</td>
-										<td>개꿀잼 ㅋfdsfdsfdsfdsfs</td>
-										<td>앙기모리</td>
-										<td>2021-07-13</td>
-									</tr>
-								</tbody>
-							</table>
-						</div>
-						<br>
-						<h4 class="mt-3 mb-3 fw-bold ms-1">최근 신청 게시글</h4>
-						<div class="request-container">
+						<h4 class="mt-3 mb-3 fw-bold ms-1">도서 후기</h4>
+						<div class="border-container d-flex gap-2">
 							<table class="table">
 								<thead class="fw-bold">
 									<tr>
@@ -267,24 +260,20 @@
 				</div>
 			</div>
 		</div>
-		
+
 		<footer class="position-relative mt-5" style="background-color: #000; color: #fff">
 			<div class="container text-center p-5">
 				<div class="d-flex align-items-center justify-content-center">
-					<img style="margin-right: 5px; width: 40px; height: 30px;"
-						src="images/logo.png" /> &nbsp; <span
-						style="font-size: 30px;">NOVELPIA</span>
+					<img style="width: 30px; height: 30px" src="https://img.icons8.com/fluency/48/000000/rhombus.png" /> &nbsp; <span style="font-size: 30px">NOVELPIA</span>
 				</div>
-				<div class="mt-3" style="font-size: 13px;">
-					<a class="text-decoration-none text-white" href="#">최신 뉴스 보기</a>&nbsp;| <a
-						class="text-decoration-none text-white" href="#">회사 위치</a>&nbsp;| <a
-						class="text-decoration-none text-white" href="#">개인정보 처리 방침</a>
+				<div class="mt-3" style="font-size: 13px">
+					<a class="text-decoration-none text-white" href="#">최신 뉴스 보기</a>&nbsp;| <a class="text-decoration-none text-white" href="#">회사 위치</a>&nbsp;|
+					<a class="text-decoration-none text-white" href="#">개인정보 처리 방침</a>
 				</div>
 			</div>
 		</footer>
 
-
-		<script src="js/bootstrap/bootstrap.js"></script>
 		<script src="js/jquery/jquery-3.6.0.js"></script>
+		<script src="js/bootstrap/bootstrap.bundle.js"></script>
 	</body>
 </html>
