희망 도서 신청 페이지 제작  - 희망 도서신청 페이지  - 희망 도서신청 글쓰기 페이지  - 희망 도서신청 글보기 페이지
도서 후기 관련 페이지 제작
 - 도서 후기 글보기
 - 도서 후기 글쓰기
 - 도서 후기 글목록

포인트 충전 페이지 추가

마이페이지 추가
 - 왼쪽 마이페이지 사이드 메뉴 추가
 - 대여목록 페이지 완료

--- a/Workspace/Project/WebContent/menu-mypage-borrow-list.html
+++ b/Workspace/Project/WebContent/menu-mypage-borrow-list.html
@@ -8,8 +8,8 @@
 
 		<link rel="stylesheet" href="css/bootstrap/bootstrap.css" />
 		<link rel="stylesheet" href="css/header.css" type="text/css" />
-		<link rel="stylesheet" href="css/left-content-ranking.css" type="text/css" />
-		<link rel="stylesheet" href="css/menu-search-info.css" type="text/css" />
+		<link rel="stylesheet" href="css/left-content-mypage.css" type="text/css" />
+		<link rel="stylesheet" href="css/menu-mypage-borrow-list.css" type="text/css" />
 	</head>
 	<body>
 		<div class="bg-white mx-auto p-3" style="width: 1250px">
@@ -117,144 +117,131 @@
 			<div class="container-xxl mt-2 p-0" style="width: 1200px">
 				<div class="main-content">
 					<div class="left-content">
-						<!-- <div onclick="location.href='newurl.html';">&nbsp;</div> 활용 -->
-						<div class="card" role="button">
-							<div class="card-header"><a href="#" class="text-decoration-none text-dark fw-bold" style="font-size: 20px">① 천재 흑마법사</a><br /></div>
-							<div class="card-body p-3">
-								<img src="https://cdn1.munpia.com/files/attach/2021/0803/001/g0hYyK68OcR8NwtT.jpg" class="w-100 bg-info" style="height: 300px" />
-							</div>
-							<div class="card-footer d-flex justify-content-start align-items-center">
-								<span class="rating-span">평점 :&nbsp;</span>
-								<div class="rating-container" style="width: 100px; height: 20px">
-									<div class="rating-star-empty w-100"></div>
-									<div class="rating-star-fill" style="width: 30%"></div>
-								</div>
-								<span class="rating-score">(3.1)&nbsp;</span>
-							</div>
-						</div>
-						<div class="card" role="button">
-							<div class="card-header"><a href="#" class="text-decoration-none text-dark fw-bold" style="font-size: 20px">① 천재 흑마법사</a><br /></div>
-							<div class="card-body p-3">
-								<img src="https://cdn1.munpia.com/files/attach/2021/0803/001/g0hYyK68OcR8NwtT.jpg" class="w-100 bg-info" style="height: 300px" />
-							</div>
-							<div class="card-footer d-flex justify-content-start align-items-center">
-								<span class="rating-span">평점 :&nbsp;</span>
-								<div class="rating-container" style="width: 100px; height: 20px">
-									<div class="rating-star-empty w-100"></div>
-									<div class="rating-star-fill" style="width: 30%"></div>
-								</div>
-								<span class="rating-score">(3.1)&nbsp;</span>
-							</div>
-						</div>
-						<div class="card" role="button">
-							<div class="card-header"><a href="#" class="text-decoration-none text-dark fw-bold" style="font-size: 20px">① 천재 흑마법사</a><br /></div>
-							<div class="card-body p-3">
-								<img src="https://cdn1.munpia.com/files/attach/2021/0803/001/g0hYyK68OcR8NwtT.jpg" class="w-100 bg-info" style="height: 300px" />
-							</div>
-							<div class="card-footer d-flex justify-content-start align-items-center">
-								<span class="rating-span">평점 :&nbsp;</span>
-								<div class="rating-container" style="width: 100px; height: 20px">
-									<div class="rating-star-empty w-100"></div>
-									<div class="rating-star-fill" style="width: 30%"></div>
-								</div>
-								<span class="rating-score">(3.1)&nbsp;</span>
-							</div>
-						</div>
+						<button class="btn btn-normal">대여 도서 목록</button>
+						<button class="btn btn-reverse">구매 도서 목록</button>
+						<button class="btn btn-reverse">포인트 충전 내역</button>
+						<button class="btn btn-reverse">포인트 이용 내역</button>
+						<button class="btn btn-reverse">회원 정보 변경</button>
+						<button class="btn btn-reverse">회원 탈퇴</button>
 					</div>
-
-					<div class="right-content" style="width: 100%">
-						<h4 class="mt-3 mb-3 fw-bold ms-1">도서 정보</h4>
-						<div class="border-container d-flex gap-2">
-							<div class="d-flex flex-column gap-2" style="width: 60%; padding-right: 30px;">
-								<div class="row g-0">
-									<div class="col-3">제목</div>
-									<div class="col">천재 흑마법사</div>
-								</div>
-								<div class="row g-0">
-									<div class="col-3">저자</div>
-									<div class="col">노란커피</div>
-								</div>
-								<div class="row g-0">
-									<div class="col-3">출판사</div>
-									<div class="col">문피아</div>
-								</div>
-								<div class="row g-0">
-									<div class="col-3">연령제한</div>
-									<div class="col">전체이용가</div>
-								</div>
-								<div class="row g-0">
-									<div class="col-3">코드</div>
-									<div class="col">AX000DD</div>
-								</div>
-								<div class="row g-0">
-									<div class="col-3">평점</div>
-									<div class="col d-flex align-items-end">
-										<div class="rating-container" style="width: 150px; height: 30px">
-											<div class="rating-star-empty w-100"></div>
-											<div class="rating-star-fill" style="width: 30%"></div>
-										</div>
-										<span class="rating-score">(3.1)&nbsp;</span>
-									</div>
-								</div>
-								<div class="w-100 h-100 row align-items-end gap-3 g-0 p-0 border-0">
-									<div class="text-center text-secondary">이미 소장중인 도서입니다.</div>
-									<div class="col">
-										<button class="w-100 h-100 btn-reverse box-shadow">대여(50P)</button>
-									</div>
-									<div class="col">
-										<button class="w-100 h-100 btn-reverse box-shadow">구매(50P)</button>
-									</div>
-								</div>
-							</div>
-							<div class="image-container">
-								<img class="w-100 h-100" src="https://cdn1.munpia.com/files/attach/2021/0803/001/g0hYyK68OcR8NwtT.jpg" />
-							</div>
-						</div>
-						<br>
-						<h4 class="mt-3 mb-3 fw-bold ms-1">도서 후기</h4>
-						<div class="border-container d-flex gap-2">
-							<table class="table">
+					
+					<div class="right-content d-flex flex-column gap-2" style="width: 100%">
+						<h4 class="mt-3 mb-3 fw-bold ms-1">대여 도서 목록</h4>
+						<div class="border-container px-4">
+							<table class="table my-book-table">
 								<thead class="fw-bold">
 									<tr>
 										<td style="width: 8%;" >글번호</td>
-										<td style="width: 60%;" >제목</td>
-										<td style="width: 15%;">작성자</td>
-										<td>작성일</td>
+										<td>도서명</td>
+										<td style="width: 15%;">대여 시작</td>
+										<td style="width: 15%;">대여 종료</td>
+										<td style="width: 15%;">차감 포인트</td>
 									</tr>
 								</thead>
 								<tbody>
 									<tr onclick="document.location='https://novel.munpia.com/236702'" role="button">
 										<td>1</td>
-										<td>개꿀잼 ㅋfdsfdsfdsfdsfs</td>
-										<td>앙기모리</td>
-										<td>2021-07-13</td>
+										<td>천재 흑마법사</td>
+										<td>2021-07-13<br>17:11:05</td>
+										<td>2021-07-15<br>20:01:05</td>
+										<td>1</td>
 									</tr>
 									<tr onclick="document.location='https://novel.munpia.com/236702'" role="button">
-										<td>2</td>
-										<td>개꿀잼 ㅋfdsfdsfdsfdsfs</td>
-										<td>앙기모리</td>
-										<td>2021-07-13</td>
+										<td>1</td>
+										<td>천재 흑마법사</td>
+										<td>2021-07-13<br>17:11:05</td>
+										<td>2021-07-15<br>20:01:05</td>
+										<td>1</td>
 									</tr>
 									<tr onclick="document.location='https://novel.munpia.com/236702'" role="button">
-										<td>2</td>
-										<td>개꿀잼 ㅋfdsfdsfdsfdsfs</td>
-										<td>앙기모리</td>
-										<td>2021-07-13</td>
+										<td>1</td>
+										<td>천재 흑마법사</td>
+										<td>2021-07-13<br>17:11:05</td>
+										<td>2021-07-15<br>20:01:05</td>
+										<td>1</td>
 									</tr>
 									<tr onclick="document.location='https://novel.munpia.com/236702'" role="button">
-										<td>2</td>
-										<td>개꿀잼 ㅋfdsfdsfdsfdsfs</td>
-										<td>앙기모리</td>
-										<td>2021-07-13</td>
+										<td>1</td>
+										<td>천재 흑마법사</td>
+										<td>2021-07-13<br>17:11:05</td>
+										<td>2021-07-15<br>20:01:05</td>
+										<td>1</td>
 									</tr>
 									<tr onclick="document.location='https://novel.munpia.com/236702'" role="button">
-										<td>2</td>
-										<td>개꿀잼 ㅋfdsfdsfdsfdsfs</td>
-										<td>앙기모리</td>
-										<td>2021-07-13</td>
+										<td>1</td>
+										<td>천재 흑마법사</td>
+										<td>2021-07-13<br>17:11:05</td>
+										<td>2021-07-15<br>20:01:05</td>
+										<td>1</td>
+									</tr>
+									<tr onclick="document.location='https://novel.munpia.com/236702'" role="button">
+										<td>1</td>
+										<td>천재 흑마법사</td>
+										<td>2021-07-13<br>17:11:05</td>
+										<td>2021-07-15<br>20:01:05</td>
+										<td>1</td>
+									</tr>
+									<tr onclick="document.location='https://novel.munpia.com/236702'" role="button">
+										<td>1</td>
+										<td>천재 흑마법사</td>
+										<td>2021-07-13<br>17:11:05</td>
+										<td>2021-07-15<br>20:01:05</td>
+										<td>1</td>
+									</tr>
+									<tr onclick="document.location='https://novel.munpia.com/236702'" role="button">
+										<td>1</td>
+										<td>천재 흑마법사</td>
+										<td>2021-07-13<br>17:11:05</td>
+										<td>2021-07-15<br>20:01:05</td>
+										<td>1</td>
+									</tr>
+									<tr onclick="document.location='https://novel.munpia.com/236702'" role="button">
+										<td>1</td>
+										<td>천재 흑마법사</td>
+										<td>2021-07-13<br>17:11:05</td>
+										<td>2021-07-15<br>20:01:05</td>
+										<td>1</td>
+									</tr>
+									<tr onclick="document.location='https://novel.munpia.com/236702'" role="button">
+										<td>1</td>
+										<td>천재 흑마법사</td>
+										<td>2021-07-13<br>17:11:05</td>
+										<td>2021-07-15<br>20:01:05</td>
+										<td>1</td>
 									</tr>
 								</tbody>
 							</table>
+
+							<div class="row align-content-center justify-content-center border-0">
+								<div class="col text-start">
+									<div class="dropdown">
+										<a class="btn btn-reverse dropdown-toggle" href="#" role="button" id="dropdownMenuLink"
+											data-bs-toggle="dropdown" aria-expanded="false"> 10개씩 보기 </a>
+	
+										<ul class="dropdown-menu" aria-labelledby="dropdownMenuLink">
+											<li><a class="dropdown-item" href="#">10개씩 보기</a></li>
+											<li><a class="dropdown-item" href="#">20개씩 보기</a></li>
+											<li><a class="dropdown-item" href="#">50개씩 보기</a></li>
+										</ul>
+									</div>
+								</div>
+								<div class="col text-center">
+									<div class="pagination-panel">
+										<button class="back"></button>
+										<div class="pages">
+											<button>1</button>
+											<button>2</button>
+											<button class="text-white bg-dark">3</button>
+											<button>4</button>
+											<button>5</button>
+										</div>
+										<button class="forward"></button>
+									</div>
+								</div>
+	
+								<div class="col text-end">
+								</div>
+							</div>
 						</div>
 					</div>
 				</div>
