--- a/Workspace/Project/WebContent/login.html
+++ b/Workspace/Project/WebContent/login.html
@@ -28,14 +28,14 @@
 								<input class="form-control" type="text" />
 							</div>
 						</div>
-						<input class="btn login-btn" type="button" value="로그인" />
+						<input class="btn login-btn btn-normal" type="button" value="로그인" />
 					</div>
 					<div class="d-flex mt-1">
 						<div class="me-auto my-auto">
 							<input id="ck-save-id-pass" type="checkbox" />
 							<label for="ck-save-id-pass">아이디/비밀번호 저장</label>
 						</div>
-						<button id="register-btn" class="btn register-btn p-1">회원가입</button>
+						<button id="register-btn" class="btn btn-normal register-btn p-1">회원가입</button>
 					</div>
 				</div>
 			</form>
@@ -70,9 +70,9 @@
 							</div>
 						</div>
 					</div>
-					<div class="mt-2 w-100 d-flex gap-2 d flex-row-reverse" style="width: 400px">
-						<button id="register-ok-btn" class="btn">회원가입</button>
-						<button id="register-cancel-btn" class="btn">취소</button>
+					<div class="mt-2 w-100 d-flex gap-2 flex-row-reverse" style="width: 400px">
+						<button id="register-ok-btn" class="btn btn-normal">회원가입</button>
+						<button id="register-cancel-btn" class="btn btn-normal">취소</button>
 					</div>
 				</div>
 			</form>
@@ -80,6 +80,7 @@
 
 		<script src="js/bootstrap/bootstrap.js"></script>
 		<script src="js/jquery/jquery-3.6.0.js"></script>
+		<script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
 		<script src="js/login.js"></script>
 	</body>
 </html>
