--- a/Workspace/Project/WebContent/main-view.html
+++ b/Workspace/Project/WebContent/main-view.html
@@ -1,20 +1,23 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-<meta charset="UTF-8" />
-<meta http-equiv="X-UA-Compatible" content="IE=edge" />
-<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-<title>메인 페이지</title>
+<html>
 
-<link rel="stylesheet" href="css/bootstrap/bootstrap.css" />
-<link rel="stylesheet" href="css/header.css" type="text/css" />
-<link rel="stylesheet" href="css/left-content-ranking.css" type="text/css" />
-<link rel="stylesheet" href="css/menu-search-book.css" type="text/css" />
+<head>
+	<meta charset="UTF-8" />
+	<meta http-equiv="X-UA-Compatible" content="IE=edge" />
+	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+	<title>메인 페이지</title>
+
+	<link rel="stylesheet" href="css/bootstrap/bootstrap.css" type="text/css" />
+	<link rel="stylesheet" href="css/header.css" type="text/css">
+	<link rel="stylesheet" href="css/left-content-ranking.css" type="text/css">
+	<link rel="stylesheet" href="css/main-view.css" type="text/css">
+
 </head>
 
 <body>
-	<div class=" bg-white mx-auto p-3" style="width: 1250px">
-		<div class="header container-fluid p-0">
+	<div class="bg-white mx-auto p-3" style="width: 1250px;">
+		<div class="header container-xxl g-0">
+
 			<div class="header-container">
 				<div class="header-logo">NOVELPIA</div>
 				<div class="header-logo-sub">The Land Of Pure Book Farmers</div>
@@ -43,31 +46,31 @@
 										<div class="d-flex gap-3">
 											<div class="d-flex flex-column gap-3">
 												<div class="input-group">
-													<span class="input-group-span input-group-text">제목</span> <input class="form-control"
-														type="text" />
+													<span class="input-group-span input-group-text">제목</span> <input
+														class="form-control" type="text" />
 												</div>
 												<div class="input-group">
-													<span class="input-group-span input-group-text">저자</span> <input class="form-control"
-														type="text" />
+													<span class="input-group-span input-group-text">저자</span> <input
+														class="form-control" type="text" />
 												</div>
 												<div class="input-group">
-													<span class="input-group-span input-group-text">출판사</span> <input class="form-control"
-														type="text" />
+													<span class="input-group-span input-group-text">출판사</span> <input
+														class="form-control" type="text" />
 												</div>
 												<div class="input-group">
-													<span class="input-group-span input-group-text">코드</span> <input class="form-control"
-														type="text" />
+													<span class="input-group-span input-group-text">코드</span> <input
+														class="form-control" type="text" />
 												</div>
 												<div class="input-group">
-													<span class="input-group-span input-group-text">이용대상</span> <select class="form-select"
-														aria-label="Default select example">
+													<span class="input-group-span input-group-text">이용대상</span> <select
+														class="form-select" aria-label="Default select example">
 														<option value="1" selected>전체이용가</option>
 														<option value="2">성인용</option>
 													</select>
 												</div>
 												<div class="input-group">
-													<span class="input-group-span input-group-text">7일 대여(P)</span> <input
-														class="form-control" type="number" />
+													<span class="input-group-span input-group-text">7일 대여(P)</span>
+													<input class="form-control" type="number" />
 												</div>
 												<div class="input-group">
 													<span class="input-group-span input-group-text">구매(P)</span> <input
@@ -115,8 +118,9 @@
 					<button class="header-menu-btn btn rounded-0 w-100">마이페이지</button>
 				</div>
 			</div>
+
 		</div>
-		<div class="container-xxl mt-2 p-0" style="width: 1200px">
+		<div class="container-xxl mt-2 p-0 w-100">
 			<div class="main-content">
 				<div class="left-content">
 					<!-- <div onclick="location.href='newurl.html';">&nbsp;</div> 활용 -->
@@ -138,6 +142,7 @@
 							<span class="rating-score">(3.1)&nbsp;</span>
 						</div>
 					</div>
+
 					<div class="card" role="button">
 						<div class="card-header">
 							<a href="#" class="text-decoration-none text-dark fw-bold" style="font-size: 20px">① 천재
@@ -177,81 +182,119 @@
 				</div>
 
 				<div class="right-content" style="width: 100%">
-					<h4 class="mt-3 mb-3 fw-bold ms-1">도서 검색</h4>
-					<div class="border-container">
-						<div class="search-group">
-							<select class="form-select">
-								<option value="1" selected>도서명</option>
-								<option value="2">저자</option>
-								<option value="3">출판사</option>
-								<option value="4">코드번호</option>
-							</select> <input class="form-control" type="text" placeholder="입력해주세요." />
+					<div class="notice-container">
+						<img src="images/notice-1.jpg" class="w-100 h-100">
+						<div class="notice-control-panel">
+							<button class="back"></button>
+							1 / 10
+							<button class="forward"></button>
 						</div>
-						<hr />
+					</div>
+					<br>
+					<h4 class="mt-3 mb-3 fw-bold ms-1">최근 리뷰 게시글</h4>
+					<div class="review-container">
 						<table class="table">
 							<thead class="fw-bold">
 								<tr>
-									<td style="width: 10%">번호</td>
-									<td style="width: 50%">제목</td>
-									<td style="width: 20%">저자</td>
-									<td>출판사</td>
+									<td style="width: 8%;">글번호</td>
+									<td style="width: 60%;">제목</td>
+									<td style="width: 15%;">작성자</td>
+									<td>작성일</td>
 								</tr>
 							</thead>
 							<tbody>
 								<tr>
 									<td>1</td>
-									<td>이 어린녀석에게 축복을</td>
-									<td>김동팔</td>
-									<td>새꿈나무</td>
+									<td>개꿀잼 ㅋfdsfdsfdsfdsfs</td>
+									<td>앙기모리</td>
+									<td>2021-07-13</td>
+								</tr>
+								<tr>
+									<td>2</td>
+									<td>개꿀잼 ㅋfdsfdsfdsfdsfs</td>
+									<td>앙기모리</td>
+									<td>2021-07-13</td>
+								</tr>
+								<tr>
+									<td>2</td>
+									<td>개꿀잼 ㅋfdsfdsfdsfdsfs</td>
+									<td>앙기모리</td>
+									<td>2021-07-13</td>
+								</tr>
+								<tr>
+									<td>2</td>
+									<td>개꿀잼 ㅋfdsfdsfdsfdsfs</td>
+									<td>앙기모리</td>
+									<td>2021-07-13</td>
+								</tr>
+								<tr>
+									<td>2</td>
+									<td>개꿀잼 ㅋfdsfdsfdsfdsfs</td>
+									<td>앙기모리</td>
+									<td>2021-07-13</td>
 								</tr>
 							</tbody>
 						</table>
-
-						<div class="row align-content-center justify-content-center">
-							<div class="col text-start">
-								<div class="dropdown">
-									<a class="btn btn-reverse dropdown-toggle" href="#" role="button" id="dropdownMenuLink"
-										data-bs-toggle="dropdown" aria-expanded="false"> 10개씩 보기 </a>
-
-									<ul class="dropdown-menu" aria-labelledby="dropdownMenuLink">
-										<li><a class="dropdown-item" href="#">10개씩 보기</a></li>
-										<li><a class="dropdown-item" href="#">20개씩 보기</a></li>
-										<li><a class="dropdown-item" href="#">50개씩 보기</a></li>
-									</ul>
-								</div>
-							</div>
-							<div class="col text-center">
-								<div class="pagination-panel">
-									<button class="back"></button>
-									<div class="pages">
-										<button>1</button>
-										<button>2</button>
-										<button class="text-white bg-dark">3</button>
-										<button>4</button>
-										<button>5</button>
-									</div>
-									<button class="forward"></button>
-								</div>
-							</div>
-
-							<div class="col text-end">
-								
-							</div>
-						</div>
+					</div>
+					<br>
+					<h4 class="mt-3 mb-3 fw-bold ms-1">최근 신청 게시글</h4>
+					<div class="request-container">
+						<table class="table">
+							<thead class="fw-bold">
+								<tr>
+									<td style="width: 8%;">글번호</td>
+									<td style="width: 60%;">제목</td>
+									<td style="width: 15%;">작성자</td>
+									<td>작성일</td>
+								</tr>
+							</thead>
+							<tbody>
+								<tr>
+									<td>1</td>
+									<td>개꿀잼 ㅋfdsfdsfdsfdsfs</td>
+									<td>앙기모리</td>
+									<td>2021-07-13</td>
+								</tr>
+								<tr>
+									<td>2</td>
+									<td>개꿀잼 ㅋfdsfdsfdsfdsfs</td>
+									<td>앙기모리</td>
+									<td>2021-07-13</td>
+								</tr>
+								<tr>
+									<td>2</td>
+									<td>개꿀잼 ㅋfdsfdsfdsfdsfs</td>
+									<td>앙기모리</td>
+									<td>2021-07-13</td>
+								</tr>
+								<tr>
+									<td>2</td>
+									<td>개꿀잼 ㅋfdsfdsfdsfdsfs</td>
+									<td>앙기모리</td>
+									<td>2021-07-13</td>
+								</tr>
+								<tr>
+									<td>2</td>
+									<td>개꿀잼 ㅋfdsfdsfdsfdsfs</td>
+									<td>앙기모리</td>
+									<td>2021-07-13</td>
+								</tr>
+							</tbody>
+						</table>
 					</div>
 				</div>
 			</div>
 		</div>
 	</div>
 
+
 	<footer class="position-relative mt-5" style="background-color: #000; color: #fff">
 		<div class="container text-center p-5">
 			<div class="d-flex align-items-center justify-content-center">
-				<img style="width: 30px; height: 30px"
-					src="https://img.icons8.com/fluency/48/000000/rhombus.png" /> &nbsp; <span
-					style="font-size: 30px">NOVELPIA</span>
+				<img style="margin-right: 5px; width: 40px; height: 30px;" src="images/logo.png" /> &nbsp; <span
+					style="font-size: 30px;">NOVELPIA</span>
 			</div>
-			<div class="mt-3" style="font-size: 13px">
+			<div class="mt-3" style="font-size: 13px;">
 				<a class="text-decoration-none text-white" href="#">최신 뉴스 보기</a>&nbsp;| <a
 					class="text-decoration-none text-white" href="#">회사 위치</a>&nbsp;| <a
 					class="text-decoration-none text-white" href="#">개인정보 처리 방침</a>
@@ -259,7 +302,8 @@
 		</div>
 	</footer>
 
+	<script src="js/bootstrap/bootstrap.js"></script>
 	<script src="js/jquery/jquery-3.6.0.js"></script>
-	<script src="js/bootstrap/bootstrap.bundle.js"></script>
+
 </body>
 </html>
